syntax = "proto3";

option go_package = "github.com/ray-project/kuberay/proto/go_client";
package proto;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  schemes: HTTP;
  responses: {
    key: "default";
    value: {
      schema: {
        json_schema: {
          ref: ".api.Status";
        }
      }
    }
  }
};

service ComputeTemplateService {
  // Creates a new Cluster.
  rpc CreateComputeTemplate(CreateComputeTemplateRequest) returns (ComputeTemplate) {
    option (google.api.http) = {
      post: "/apis/v1alpha1/compute_templates"
      body: "compute_template"
    };
  }

  // Finds a specific Cluster by ID.
  rpc GetComputeTemplate(GetComputeTemplateRequest) returns (ComputeTemplate) {
    option (google.api.http) = {
      get: "/apis/v1alpha1/compute_templates/{namespace}/{id}"
    };
  }

  // Finds all Clusters. Supports pagination, and sorting on certain fields.
  rpc ListComputeTemplates(ListComputeTemplatesRequest) returns (ListComputeTemplatesResponse) {
    option (google.api.http) = {
      get: "/apis/v1alpha1/compute_templates/{namespace}"
    };
  }

  // Deletes an Cluster without deleting the Cluster's runs and jobs. To
  // avoid unexpected behaviors, delete an Cluster's runs and jobs before
  // deleting the Cluster.
  rpc DeleteComputeTemplate(DeleteComputeTemplateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/apis/v1alpha1/compute_templates/{namespace}/{id}"
    };
  }
}

message CreateComputeTemplateRequest {
  // The ComputeTemplate to be created.
  ComputeTemplate compute_template = 1;
}

message GetComputeTemplateRequest {
  // The ID of the ComputeTemplate to be retrieved. reserved field for database layer query later
  string id = 1;
  // The name of the ComputeTemplate to be retrieved.
  string name = 2;
  // The namespace of the ComputeTemplate to be retrieved.
  string namespace =3;
}

message ListComputeTemplatesRequest {
  // The namespace of the ComputeTemplates to be retrieved. 
  string namespace =1;
  // TODO: support paganation later
}

message ListComputeTemplatesResponse {
  repeated ComputeTemplate compute_templates = 1;
}

message DeleteComputeTemplateRequest {
  // The ID of the ComputeTemplate to be deleted.
  string id = 1;
  // The name of the ComputeTemplate to be deleted.
  string name = 2;
  // The namespace of the ComputeTemplate to be deleted.
  string namespace = 3;
}

// ComputeTemplate can be reused by any compute units like worker group, workspace, image build job, etc
message ComputeTemplate {
  // The ID of the compute template
  string id = 1;
  // The name of the compute template
  string name = 2;
  // The namespace of the compute template
  string namespace = 3;
  // Number of cpus
  uint32 cpu = 4;
  // Number of memory
  uint32 memory = 5;
  // Number of gpus
  uint32 gpu = 6;
  // The detail gpu accelerator type
  string gpu_accelerator = 7;
}


service ImageTemplateService {
  // Creates a new ImageTemplate.
  rpc CreateImageTemplate(CreateImageTemplateRequest) returns (ImageTemplate) {
    option (google.api.http) = {
      post: "/apis/v1alpha1/image_templates"
      body: "image_template"
    };
  }

  // Finds a specific ImageTemplate by ID.
  rpc GetImageTemplate(GetImageTemplateRequest) returns (ImageTemplate) {
    option (google.api.http) = {
      get: "/apis/v1alpha1/image_templates/{namespace}/{id}"
    };
  }

  // Finds all ImageTemplates. Supports pagination, and sorting on certain fields.
  rpc ListImageTemplates(ListImageTemplatesRequest) returns (ListImageTemplatesResponse) {
    option (google.api.http) = {
      get: "/apis/v1alpha1/image_templates/{namespace}"
    };
  }

  // Deletes an ImageTemplate.
  rpc DeleteImageTemplate(DeleteImageTemplateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/apis/v1alpha1/image_templates/{namespace}/{id}"
    };
  }
}

message CreateImageTemplateRequest {
  // The ImageTemplate to be created.
  ImageTemplate image_template = 1;
  // The namespace of the ImageTemplate to be created.
  string namespace = 2;
}

message GetImageTemplateRequest {
  // The ID of the ImageTemplate to be retrieved. reserved field for database layer query later
  string id = 1;
  // The name of the ImageTemplate to be retrieved.
  string name = 2;
  // The namespace of the ImageTemplate to be retrieved.
  string namespace = 3;
}

message ListImageTemplatesRequest {
  // The namespace of the ImageTemplates to be retrieved.
  string namespace = 1;
  // TODO: support pagingation later
}

message ListImageTemplatesResponse {
  // A list of Compute returned.
  repeated ImageTemplate image_templates = 1;
}

message DeleteImageTemplateRequest {
  // The ID of the ImageTemplate to be deleted.
  string id = 1;
  // The name of the ImageTemplate to be deleted.
  string name = 2;
  // The namespace of the ImageTemplate to be deleted.
  string namespace = 3;
}

// ImageTemplate can be used by worker group and workspce.
// They can be distinguish by different entrypoints
message ImageTemplate {
  // The ID of the image template
  string name = 1;
  // The namespace of the image template
  string namespace = 2;
  // The base container image to be used for image building
  string base_image = 3;
  // The pip packages to install
  repeated string pip_packages = 4;
  // The conda packages to install
  repeated string conda_packages = 5;
  // The system packages to install
  repeated string system_packages = 6;
  // The environment variables to set
  map<string, string> environment_variables = 7;
  // The post install commands to execute
  string custom_commands = 8;
  // Output. The result image generated
  string image = 9;
}
